Fix text vertical align middle on safari

--- a/src/components/header/headerMobile.scss
+++ b/src/components/header/headerMobile.scss
@@ -91,7 +91,7 @@
 		}
 	}
 	.menu-mobile {
-		position: fixed;
+		position: absolute;
 		width: calc(100% - 60px);
 		height: calc(100vh - 63px);
 		top: 63px;
